finished clock and changed to 12-hour format

--- a/index.html
+++ b/index.html
@@ -11,11 +11,42 @@
 
     <!-- ======= ======= ======= body ======= ======= ======= -->
 	<body>
-        <body onload="startTime()">
+        <!-- <body onload="startTime()"> -->
 
-        <div id="clockreg"> WHAT TIME IS IT</div>
+<div class="menu">
+    <div class="menu-sub">
+        <p id="hour"><b>HOUR</b></p>
+        <p id="minute"><b>MINUTE</b></p>
+        <p id="second"><b>SECOND</b></p>
+    </div>
+</div>
 
-		<script type="text/javascript" src="clock.js"></script>
+
+<div id="clockregbox">
+    <div id="clocksub">
+        <div id="clockbox1"> </div>
+        <div id="clockbox2"> </div>
+        <div id="clockbox3"> </div>
+    </div>
+</div>
+
+
+<div id="imagediv">
+    <img id="image1" src=#>
+</div>
+
+
+	<script type="text/javascript" src="clock.js"></script>
 
 	</body>
 </html>
+
+<!-- //==ARCHIVE==// -->
+<!-- <div id="clock1"> -->
+<!-- <img src="https://secure.img1-fg.wfcdn.com/lf/maxsquare/hash/36984/27292174/1/Traditional%2BClock.jpg"> -->
+<!-- </div> -->
+
+<!-- <div id="clock2"> -->
+<!-- <img src="https://lh3.googleusercontent.com/OLkkt0y609LAuCyGnp5pPxEvZkbQ92U5BJXoR-VSexBrCFxGhxXF-R2pv8byLi2Frg=w300"> -->
+<!-- </div> -->
+<!-- </div> -->
