added AM/PM box

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div id="clockbox1"> </div>
         <div id="clockbox2"> </div>
         <div id="clockbox3"> </div>
+        <div id="clockbox4"> </div>
     </div>
 </div>
 
